--- a/usr/global_settings.json
+++ b/usr/global_settings.json
@@ -1,16 +1,26 @@
 {
     "overwrite": [
         {
+            "source_address": "ASRL4::INSTR",
             "rigol_oscilloscope_address": "USB0::0x1AB1::0x0517::DS1ZE223304729::INSTR",
-            "voltcraft_source_address": "ASRL4::INSTR",
-            "default_saving_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\ME-Devices"
+            "arduino_address": "ASRL6::INSTR",
+            "default_saving_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\ME-Devices",
+            "base_capacitance": "3300",
+            "coil_inductance": "0.159",
+            "capacitances": "3300, 2200, 1000, 680, 330, 150",
+            "arduino_pins": "7,6,5,4,3,2"
         }
     ],
     "default": [
         {
             "rigol_oscilloscope_address": "USB0::0x1AB1::0x0517::DS1ZE223304729::INSTR",
-            "voltcraft_source_address": "ASRL4::INSTR",
-            "default_saving_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\ME-Devices"
+            "source_address": "ASRL4::INSTR",
+            "arduino_address": "ASRL6::INSTR",
+            "default_saving_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\ME-Devices",
+            "base_capacitance": "3300",
+            "capacitances": "3300, 2200, 1000, 680, 330, 150",
+            "arduino_pins": "7,6,5,4,3,2",
+            "coil_inductance": "0.159"
         }
     ]
 }
