--- a/usr/global_settings.json
+++ b/usr/global_settings.json
@@ -5,11 +5,12 @@
             "rigol_oscilloscope_address": "USB0::0x1AB1::0x0517::DS1ZE223304729::INSTR",
             "arduino_address": "ASRL6::INSTR",
             "default_saving_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\ME-Devices",
-            "base_capacitance": "3300",
+            "base_capacitance": "3300.0",
             "coil_inductance": "0.2022",
-            "circuit_resistance": "13",
+            "circuit_resistance": "13.5",
             "capacitances": "3300, 2200, 1000, 680, 330, 150",
-            "arduino_pins": "2,3,4,5,6,7"
+            "arduino_pins": "2,3,4,5,6,7",
+            "calibration_file_path": "C:/Users/GatherLab-Julian/Documents/Nextcloud/01-Studium/03-Promotion/02-Data/ME-Devices/2021-02-16_Capacitance-calibration/2021-02-16_settling-time-01-freq-step-02_resonances_02.csv"
         }
     ],
     "default": [
@@ -19,10 +20,11 @@
             "arduino_address": "ASRL6::INSTR",
             "default_saving_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\ME-Devices",
             "coil_inductance": "0.2022",
-            "circuit_resistance": "13",
+            "circuit_resistance": "13.5",
             "base_capacitance": "3300",
             "capacitances": "3300, 2200, 1000, 680, 330, 150",
-            "arduino_pins": "2,3,4,5,6,7"
+            "arduino_pins": "2,3,4,5,6,7",
+            "calibration_file_path": "C:/Users/GatherLab-Julian/Documents/Nextcloud/01-Studium/03-Promotion/02-Data/ME-Devices/2021-02-16_Capacitance-calibration/2021-02-16_settling-time-01-freq-step-02_resonances_02.csv"
         }
     ]
 }
