--- a/usr/global_settings.json
+++ b/usr/global_settings.json
@@ -6,11 +6,13 @@
             "arduino_address": "ASRL6::INSTR",
             "default_saving_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\ME-Devices",
             "base_capacitance": "3300.0",
-            "coil_inductance": "0.783",
-            "circuit_resistance": "12.0",
+            "coil_inductance": "0.0773",
+            "coil_windings": "35.0",
+            "coil_radius": "25.0",
+            "circuit_resistance": "13.0",
             "capacitances": "3300, 2200, 1000, 680, 330, 150",
             "arduino_pins": "2,3,4,5,6,7",
-            "calibration_file_path": "C:/Users/GatherLab-Julian/Documents/Nextcloud/01-Studium/03-Promotion/02-Data/ME-Devices/calibration/2021-02-17_3300pF-0075mH_resonances.csv"
+            "calibration_file_path": "C:/Users/GatherLab-Julian/Documents/Nextcloud/01-Studium/03-Promotion/02-Data/ME-Devices/calibration/2021-02-18_3300pF-small-coil-0073mH_resonances.csv"
         }
     ],
     "default": [
@@ -19,7 +21,9 @@
             "source_address": "ASRL4::INSTR",
             "arduino_address": "ASRL6::INSTR",
             "default_saving_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\ME-Devices",
-            "coil_inductance": "0.2022",
+            "coil_inductance": "0.0773",
+            "coil_windings": "35",
+            "coil_radius": "25",
             "circuit_resistance": "13.5",
             "base_capacitance": "3300",
             "capacitances": "3300, 2200, 1000, 680, 330, 150",
