--- a/usr/global_settings.json
+++ b/usr/global_settings.json
@@ -5,14 +5,14 @@
             "rigol_oscilloscope_address": "USB0::0x1AB1::0x0517::DS1ZE223304729::INSTR",
             "arduino_address": "ASRL6::INSTR",
             "default_saving_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\ME-Devices",
-            "base_capacitance": "3300.0",
-            "coil_inductance": "0.075",
+            "base_capacitance": "10000.0",
+            "coil_inductance": "0.072",
             "coil_windings": "35.0",
             "coil_radius": "25.0",
-            "circuit_resistance": "13.0",
-            "capacitances": "3300, 2200, 1000, 680, 330, 150",
+            "circuit_resistance": "12.0",
+            "capacitances": "3300, 2200, 1000, 680, 10000, 4700",
             "arduino_pins": "2,3,4,5,6,7",
-            "calibration_file_path": "C:/Users/GatherLab-Julian/Documents/Nextcloud/01-Studium/03-Promotion/02-Data/ME-Devices/calibration/2021-03-24_3300pF-0.075mH_resonances.csv"
+            "calibration_file_path": "C:/Users/GatherLab-Julian/Documents/Nextcloud/01-Studium/03-Promotion/02-Data/ME-Devices/calibration/2021-05-14_72uH-10000pF-base_resonances"
         }
     ],
     "default": [
