--- a/usr/global_settings.json
+++ b/usr/global_settings.json
@@ -5,7 +5,7 @@
             "rigol_oscilloscope_address": "USB0::0x1AB1::0x0517::DS1ZE223304729::INSTR",
             "arduino_address": "ASRL6::INSTR",
             "default_saving_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\ME-Devices",
-            "pid_parameters": "3.6, 18, 0.05",
+            "pid_parameters": "3.5, 15, 0.01",
             "base_capacitance": "10000.0",
             "coil_inductance": "0.072",
             "coil_windings": "35.0",
@@ -15,7 +15,7 @@
             "circuit_resistance": "12.0",
             "capacitances": "3300, 2200, 1000, 680, 10000, 4700",
             "arduino_pins": "2,3,4,5,6,7",
-            "calibration_file_path": "C:/Users/GatherLab-Julian/Documents/Nextcloud/01-Studium/03-Promotion/02-Data/ME-Devices/calibration/2021-05-14_72uH-10000pF-base_resonances"
+            "calibration_file_path": "C:/Users/GatherLab-Julian/Documents/Nextcloud/01-Studium/03-Promotion/02-Data/ME-Devices/calibration/2021-05-14_72uH-10000pF-base_resonances.csv"
         }
     ],
     "default": [
@@ -24,7 +24,7 @@
             "source_address": "ASRL4::INSTR",
             "arduino_address": "ASRL6::INSTR",
             "default_saving_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\ME-Devices",
-            "pid_parameters": "3.5, 18, 0.05",
+            "pid_parameters": "3.5, 15, 0.02",
             "coil_inductance": "0.0773",
             "coil_windings": "35",
             "coil_radius": "25",
