--- a/usr/global_settings.json
+++ b/usr/global_settings.json
@@ -6,16 +6,16 @@
             "arduino_address": "ASRL6::INSTR",
             "default_saving_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\ME-Devices",
             "pid_parameters": "1, 8, 0",
-            "base_capacitance": "10000.0",
-            "coil_inductance": "0.072",
-            "coil_windings": "35.0",
-            "coil_radius": "26.0",
+            "base_capacitance": "1200.0",
+            "coil_inductance": "0.1987",
+            "coil_windings": "53.0",
+            "coil_radius": "36.0",
             "pickup_coil_windings": "4.0",
             "pickup_coil_radius": "20.0",
-            "circuit_resistance": "12.0",
-            "capacitances": "3300, 2200, 1000, 680, 10000, 4700",
-            "arduino_pins": "2,3,4,5,6,7",
-            "calibration_file_path": "C:/Users/GatherLab-Julian/Documents/Nextcloud/01-Studium/03-Promotion/02-Data/ME-Devices/calibration/2021-05-14_72uH-10000pF-base_resonances.csv"
+            "circuit_resistance": "14.0",
+            "capacitances": "39, 81, 160, 330, 680, 1200, 2200, 4700, 9100, 15000",
+            "arduino_pins": "4,5,6,7,8,9,10,1,2,3",
+            "calibration_file_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\me-devices\\calibration\\2021-06-29_198uH-1200pF_resonances.csv"
         }
     ],
     "default": [
