--- a/usr/global_settings.json
+++ b/usr/global_settings.json
@@ -12,7 +12,7 @@
             "coil_windings": "53.0",
             "coil_radius": "36.0",
             "pickup_coil_windings": "1.0",
-            "pickup_coil_radius": "12.5",
+            "pickup_coil_radius": "18",
             "circuit_resistance": "10",
             "capacitances": "39, 81, 160, 330, 680, 1200, 2200, 4700, 9100, 15000",
             "arduino_pins": "4,5,6,7,8,9,10,1,2,3",
@@ -21,22 +21,22 @@
     ],
     "default": [
         {
-            "rigol_oscilloscope_address": "USB0::0x1AB1::0x0517::DS1ZE223304729::INSTR",
             "hf_source_address": "ASRL4::INSTR",
             "dc_source_address": "ASRL5::INSTR",
+            "rigol_oscilloscope_address": "USB0::0x1AB1::0x0517::DS1ZE223304729::INSTR",
             "arduino_address": "ASRL6::INSTR",
             "default_saving_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\ME-Devices",
-            "pid_parameters": "3.5, 15, 0.02",
-            "coil_inductance": "0.0773",
-            "coil_windings": "35",
-            "coil_radius": "25",
-            "circuit_resistance": "13.5",
-            "base_capacitance": "3300",
-            "capacitances": "3300, 2200, 1000, 680, 330, 150",
-            "arduino_pins": "2,3,4,5,6,7",
-            "calibration_file_path": "C:/Users/GatherLab-Julian/Documents/Nextcloud/01-Studium/03-Promotion/02-Data/ME-Devices/2021-02-16_Capacitance-calibration/2021-02-16_settling-time-01-freq-step-02_resonances_02.csv",
-            "pickup_coil_windings": "4",
-            "pickup_coil_radius": "20"
+            "pid_parameters": "0.01, 10, 0.01",
+            "base_capacitance": "1200.0",
+            "coil_inductance": "0.1987",
+            "coil_windings": "53.0",
+            "coil_radius": "36.0",
+            "pickup_coil_windings": "1.0",
+            "pickup_coil_radius": "18",
+            "circuit_resistance": "10",
+            "capacitances": "39, 81, 160, 330, 680, 1200, 2200, 4700, 9100, 15000",
+            "arduino_pins": "4,5,6,7,8,9,10,1,2,3",
+            "calibration_file_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\me-devices\\calibration\\2021-06-29_198uH-1200pF_resonances.csv"
         }
     ]
 }
