[Capacitor-settings] Change capacitor configuration

--- a/usr/global_settings.json
+++ b/usr/global_settings.json
@@ -7,16 +7,16 @@
             "arduino_address": "ASRL6::INSTR",
             "default_saving_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\ME-Devices",
             "pid_parameters": "0.01, 10, 0.01",
-            "base_capacitance": "1200",
-            "coil_inductance": "0.200",
-            "coil_windings": "53",
-            "coil_radius": "36",
+            "coil_inductance": "0.2",
+            "coil_windings": "53.0",
+            "coil_radius": "36.0",
             "pickup_coil_windings": "1.0",
             "pickup_coil_radius": "17.75",
             "circuit_resistance": "12.0",
-            "capacitances": "39, 81, 160, 330, 680, 1000, 2200, 4700, 9100, 15000",
+            "base_capacitance": "2200",
+            "capacitances": "39, 81, 160, 330, 680, 1200, 2200, 4700, 9100, 20",
             "arduino_pins": "4,5,6,7,8,9,10,1,2,3",
-            "calibration_file_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\me-devices\\calibration\\2021-09-07_200uH-1200pF_resonances.csv",
+            "calibration_file_path": "",
             "dc_field_conversion_factor": "1.966"
         }
     ],
@@ -28,16 +28,16 @@
             "arduino_address": "ASRL6::INSTR",
             "default_saving_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\ME-Devices",
             "pid_parameters": "0.01, 10, 0.01",
-            "base_capacitance": "1200.0",
+            "base_capacitance": "2200.0",
             "coil_inductance": "0.200",
             "coil_windings": "53.0",
             "coil_radius": "36.0",
             "pickup_coil_windings": "1.0",
             "pickup_coil_radius": "17.75",
             "circuit_resistance": "10",
-            "capacitances": "39, 81, 160, 330, 680, 1000, 2200, 4700, 9100, 15000",
+            "capacitances": "39, 81, 160, 330, 680, 1200, 2200, 4700, 9100, 20",
             "arduino_pins": "4,5,6,7,8,9,10,1,2,3",
-            "calibration_file_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\me-devices\\calibration\\2021-09-07_200uH-1200pF_resonances.csv",
+            "calibration_file_path": "",
             "dc_field_conversion_factor": "1.966"
         }
     ]
