[settings] More modest pid and other minor adjustments

--- a/usr/global_settings.json
+++ b/usr/global_settings.json
@@ -4,19 +4,19 @@
             "dc_source_address": "ASRL5::INSTR",
             "hf_source_address": "ASRL4::INSTR",
             "rigol_oscilloscope_address": "USB0::0x1AB1::0x0517::DS1ZE223304729::INSTR",
-            "arduino_address": "ASRL6::INSTR",
+            "arduino_address": "ASRL8::INSTR",
             "default_saving_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\ME-Devices",
-            "pid_parameters": "0.01, 10, 0.01",
+            "pid_parameters": "0.2, 2, 0.01",
+            "base_capacitance": "2200.0",
             "coil_inductance": "0.2",
             "coil_windings": "53.0",
             "coil_radius": "36.0",
             "pickup_coil_windings": "1.0",
             "pickup_coil_radius": "17.75",
-            "circuit_resistance": "12.0",
-            "base_capacitance": "2200",
+            "circuit_resistance": "15.0",
             "capacitances": "39, 81, 160, 330, 680, 1200, 2200, 4700, 9100, 20",
             "arduino_pins": "4,5,6,7,8,9,10,1,2,3",
-            "calibration_file_path": "",
+            "calibration_file_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\me-devices\\calibration\\2021-09-17_200uF-2200pF_resonances.csv",
             "dc_field_conversion_factor": "1.966"
         }
     ],
@@ -25,9 +25,9 @@
             "hf_source_address": "ASRL4::INSTR",
             "dc_source_address": "ASRL5::INSTR",
             "rigol_oscilloscope_address": "USB0::0x1AB1::0x0517::DS1ZE223304729::INSTR",
-            "arduino_address": "ASRL6::INSTR",
+            "arduino_address": "ASRL8::INSTR",
             "default_saving_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\ME-Devices",
-            "pid_parameters": "0.01, 10, 0.01",
+            "pid_parameters": "0.2, 2, 0.01",
             "base_capacitance": "2200.0",
             "coil_inductance": "0.200",
             "coil_windings": "53.0",
@@ -37,7 +37,7 @@
             "circuit_resistance": "10",
             "capacitances": "39, 81, 160, 330, 680, 1200, 2200, 4700, 9100, 20",
             "arduino_pins": "4,5,6,7,8,9,10,1,2,3",
-            "calibration_file_path": "",
+            "calibration_file_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\me-devices\\calibration\\2021-09-17_200uF-2200pF_resonances.csv",
             "dc_field_conversion_factor": "1.966"
         }
     ]
