--- a/usr/global_settings.json
+++ b/usr/global_settings.json
@@ -1,11 +1,11 @@
 {
     "overwrite": [
         {
-            "dc_source_address": "ASRL5::INSTR",
-            "hf_source_address": "ASRL4::INSTR",
+            "dc_source_address": "ASRL9::INSTR",
+            "hf_source_address": "ASRL8::INSTR",
             "rigol_oscilloscope_address": "USB0::0x1AB1::0x0517::DS1ZE223304729::INSTR",
-            "arduino_address": "ASRL8::INSTR",
-            "default_saving_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\ME-Devices",
+            "arduino_address": "ASRL7::INSTR",
+            "default_saving_path": "C:\\Users\\GatherLab\\Documents\\Data\\Julian",
             "pid_parameters": "0.2, 2, 0.01",
             "base_capacitance": "2200.0",
             "coil_inductance": "0.2",
@@ -16,17 +16,17 @@
             "circuit_resistance": "15.0",
             "capacitances": "39, 81, 160, 330, 680, 1200, 2200, 4700, 9100, 20",
             "arduino_pins": "4,5,6,7,8,9,10,1,2,3",
-            "calibration_file_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\me-devices\\calibration\\2021-09-17_200uF-2200pF_resonances.csv",
+            "calibration_file_path": "C:\\Users\\GatherLab\\Documents\\Data\\Julian\\01_ME-devices\\calibration\\2021-09-17_200uF-2200pF_resonances.csv",
             "dc_field_conversion_factor": "1.966"
         }
     ],
     "default": [
         {
-            "hf_source_address": "ASRL4::INSTR",
-            "dc_source_address": "ASRL5::INSTR",
+            "hf_source_address": "ASRL8::INSTR",
+            "dc_source_address": "ASRL9::INSTR",
             "rigol_oscilloscope_address": "USB0::0x1AB1::0x0517::DS1ZE223304729::INSTR",
-            "arduino_address": "ASRL8::INSTR",
-            "default_saving_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\ME-Devices",
+            "arduino_address": "ASRL7::INSTR",
+            "default_saving_path": "C:\\Users\\GatherLab\\Documents\\Data\\Julian",
             "pid_parameters": "0.2, 2, 0.01",
             "base_capacitance": "2200.0",
             "coil_inductance": "0.200",
@@ -37,7 +37,7 @@
             "circuit_resistance": "10",
             "capacitances": "39, 81, 160, 330, 680, 1200, 2200, 4700, 9100, 20",
             "arduino_pins": "4,5,6,7,8,9,10,1,2,3",
-            "calibration_file_path": "C:\\Users\\GatherLab-Julian\\Documents\\Nextcloud\\01-Studium\\03-Promotion\\02-Data\\me-devices\\calibration\\2021-09-17_200uF-2200pF_resonances.csv",
+            "calibration_file_path": "C:\\Users\\GatherLab\\Documents\\Data\\Julian\\01_ME-devices\\calibration\\2021-09-17_200uF-2200pF_resonances.csv",
             "dc_field_conversion_factor": "1.966"
         }
     ]
